Setup native access protections
Add "--enable-native-access" to native image options