@@ -52,6 +52,8 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
     /* Defunct legacy options that we have to accept to maintain backward compatibility */
     private static final String noServerOption = "--no-server";
 
+    private static final String nativeAccessOption = "--enable-native-access";
+
     DefaultOptionHandler(NativeImage nativeImage) {
         super(nativeImage);
     }
@@ -141,6 +143,14 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
                 nativeImage.addCustomJavaArgs("--enable-preview");
                 nativeImage.enablePreview();
                 return true;
+            case nativeAccessOption:
+                args.poll();
+                String modules = args.poll();
+                if (modules == null) {
+                    NativeImage.showError(nativeAccessOption + moduleSetModifierOptionErrorMessage);
+                }
+                nativeImage.addCustomJavaArgs(nativeAccessOption + "=" + modules);
+                return true;
         }
 
         String singleArgClasspathPrefix = newStyleClasspathOptionName + "=";
@@ -213,6 +223,15 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
                 NativeImage.showError(headArg + moduleSetModifierOptionErrorMessage);
             }
             nativeImage.addLimitedModules(limitModulesArgs);
+            return true;
+        }
+        if (headArg.startsWith(nativeAccessOption + "=")) {
+            args.poll();
+            String nativeAccessModules = headArg.substring(nativeAccessOption.length() + 1);
+            if (nativeAccessModules.isEmpty()) {
+                NativeImage.showError(headArg + moduleSetModifierOptionErrorMessage);
+            }
+            nativeImage.addCustomJavaArgs(headArg);
             return true;
         }
         if (headArg.startsWith("@") && !disableAtFiles) {
